Fixed FileSystems2 and pack serial